--- a/test.css
+++ b/test.css
@@ -1,7 +1,19 @@
 #drop_zone {
+    border: 5px solid gray;
+    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100px;
+    padding: 5px;
+    text-align: center;
 }
 
 #upload_zone {
+    border: 5px solid red;
+    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+    padding: 5px;
+    text-align: center;
 }
 
 div {
