--- a/test.css
+++ b/test.css
@@ -5,6 +5,11 @@
     width: 100px;
     padding: 5px;
     text-align: center;
+    position: absolute;
+    left: 50%;
+    margin-left: -50px;
+    top: 10px;
+    height: 30px;
 }
 
 #upload_zone {
@@ -14,6 +19,11 @@
     width: 200px;
     padding: 5px;
     text-align: center;
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    top: 100px;
+    height 30px;
 }
 
 div {
