--- a/test.css
+++ b/test.css
@@ -1,29 +1,25 @@
 #drop_zone {
-    border: 5px solid gray;
-    margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100px;
-    padding: 5px;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    margin-left: -50px;
-    top: 10px;
-    height: 30px;
+	border:5px solid gray;
+	margin:10px;
+	font-family:Arial,Helvetica,sans-serif;
+	width:100px;
+	padding:5px;
+	text-align:center;
+	position:absolute;
+	left:50%;
+	margin-left:-50px;
+	top:10px;
+	height:30px;
 }
-
 #upload_zone {
-    border: 5px solid red;
-    margin: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 200px;
-    padding: 5px;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    margin-left: -100px;
-    top: 100px;
-    height 30px;
+	border:5px solid red;
+	margin:10px;
+	font-family:Arial,Helvetica,sans-serif;
+	width:200px;
+	padding:5px;
+	text-align:center;
+	position:absolute;
+	left:50%;
+	margin-left:-100px;
+	top:100px;height 30px;
 }
-
-
